[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Character/Line2DDraw.gd" type="Script" id=1]
[ext_resource path="res://src/Character/Human.gd" type="Script" id=2]
[ext_resource path="res://src/Character/Movement.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Character/CPU.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Character/LabelLayout.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Character/VisionSensor.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Character/HurtBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Character/HitBox.tscn" type="PackedScene" id=9]


[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Human" type="KinematicBody2D"]
collision_layer = 2147483650
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, -8 )
points = PoolVector2Array( 0, -25, -20, 20, 20, 20, 0, -25 )
width = 2.0
default_color = Color( 0.117647, 0.392157, 0.631373, 1 )
antialiased = true
script = ExtResource( 1 )
inner_color = Color( 0.282353, 0.623529, 0.141176, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisionSensor" parent="." instance=ExtResource( 6 )]
position = Vector2( 0.181107, -15.9374 )

[node name="CPU" parent="." instance=ExtResource( 4 )]
control_obj = NodePath("..")

[node name="Status" parent="CPU" index="0"]
update_time = 10

[node name="Movement" parent="." instance=ExtResource( 3 )]
control_obj = NodePath("..")

[node name="WallAvoidRay" parent="Movement" index="1"]
cast_to = Vector2( 0, 40 )

[node name="HurtBox" parent="." instance=ExtResource( 8 )]

[node name="HitBox" parent="." instance=ExtResource( 9 )]

[node name="NameDisplay" parent="." instance=ExtResource( 5 )]

[editable path="CPU"]

[editable path="Movement"]
